prepare to deploy

--- a/src/myplace/index.html
+++ b/src/myplace/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>My Place</title>
+  <link rel="shortcut icon" href="../favicon.ico" />
+  <link rel="manifest" href="../manifest.json" />
   <link rel="stylesheet" href="../styles/app.css" />
   <link rel="stylesheet" href="../styles/myplace.css" />
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCAeuDpenuPeYVTHVmOjhDyw27S3sVxhg4" defer></script>
@@ -13,7 +15,7 @@
 
 <body>
   <header>
-    <h1></h1>
+    <h1 class="adress-header"></h1>
   </header>
 
   <section id="selected-place">
@@ -21,7 +23,7 @@
   </section>
 
   <section id="share-controls">
-    <a href="/">Share a New Place!</a>
+    <a href="/">Find a new place!</a>
   </section>
 </body>
 
