--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Share a Place</title>
+  <link rel="shortcut icon" href="favicon.ico" />
+  <link rel="manifest" href="manifest.json" />
   <link rel="stylesheet" href="styles/app.css" />
   <link rel="stylesheet" href="styles/shareplace.css" />
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCAeuDpenuPeYVTHVmOjhDyw27S3sVxhg4" defer></script>
@@ -23,31 +25,35 @@
   </template>
 
   <header>
-    <h1>Share a Place!</h1>
+    <div class="container">
+      <img src="assets/logo.png" alt="logo" />
+      <h1>Share place</h1>
+    </div>
   </header>
 
   <section id="selected-place">
     <div id="map">
+      <img src="assets/share-place.png" alt="map icon">
       <p>
-        You haven't selected any place yet. Please enter an address or locate
-        yourself!
+        Please enter the address or locate yourself!
       </p>
     </div>
   </section>
 
-  <section id="share-controls">
-    <input id="share-link" type="text" readonly value="Select a place to get a sharable link." />
-    <button id="share-btn" disabled>Share Place</button>
-  </section>
-
   <section id="place-data">
     <form>
-      <label for="address">Address</label>
-      <input type="text" />
-      <button type="submit">Find Place</button>
+      <input type="text" placeholder="adress" />
+      <button class="color-btn" type="submit">Find place</button>
     </form>
-    <button id="locate-btn">Get Current Location</button>
+    <button class="color-btn" id="locate-btn">Current location</button>
   </section>
+
+  <section id="share-controls">
+    <div class="prompt">Copy and open in a new tab</div>
+    <input id="share-link" type="text" readonly value="The link will be here..." />
+    <button class="color-btn" id="share-btn" disabled>Copy</button>
+  </section>
+
 </body>
 
 </html>
